tests/ui/impl-trait/inference/in-defining-item/reveal-hidden-via-field-access.new.stderr
error[E0609]: no field `field` on type `impl Sized`
  --> $DIR/reveal-hidden-via-field-access.rs:14:26
   |
LL |     let _: () = test(!n).field;
   |                          ^^^^^ unknown field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
